# lead_stream_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  prestart.sh  pyproject.toml  start.sh
app/: __main__.py  application.py  lifespan.py  loguru_logging.py  middleware.py  models.py  schemas.py  settings.py
app/api/: api.py  deps.py
app/api/endpoints/: leads.py  user.py
app/api/endpoints/leads/: __init__.py  accept.py  crud.py  schemas.Lead.json  send.py  serialize.py  view.py
app/orm/: abstract.py
app/orm/sql/: base.py  session.py
app/repository/: user.py
app/schemas/: __init__.py  accept.py  common.py  send.py
app/service/: user.py
app/uow/: uow.py
assets/help/: leadcraft_api.xlsx
conf/nginx/: server_block.conf
dev/: leadcraft.py
migrations/: env.py
prisma/: partial_types.py  schema-1.prisma  schema-2.prisma  schema.prisma  seed.py
scripts/: alembic_rev.sh  prestart.sh
