[tool.poetry]
name = "lead_stream_api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.21"
fastapi = "^0.112.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.30.5"
loguru = "^0.7.2"
alembic = "^1.13.1"
tenacity = "^9.0.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
