[tool.poetry]
name = "lead_stream_api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.21"
fastapi = "^0.112.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.30.5"
loguru = "^0.7.2"
alembic = "^1.13.1"
tenacity = "^9.0.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
gunicorn = "^23.0.0"
requests = "^2.32.3"
pydantic = {extras = ["email"], version = "^2.8.2"}
prisma = "^0.14.0"
pandas = "^2.2.2"
python-multipart = "^0.0.9"
openpyxl = "^3.1.5"
aiohttp = "^3.10.3"
case-converter = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
